# Autonomous_Stretcher

./: LICENSE.md  README.md
AS_robot/: model.config  model.sdf
catkin_ws/catkin_ws/devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Goal.h  Turtlebot3Result.h
catkin_ws/catkin_ws/devel/lib/pkgconfig/: turtlebot3_bringup.pc  turtlebot3_description.pc  (+1 more)
catkin_ws/catkin_ws/src/as_bringup/: CMakeLists.txt  package.xml
catkin_ws/catkin_ws/src/as_bringup/launch/: as_lidar.launch  as_rpicamera.launch
catkin_ws/catkin_ws/src/as_bringup/launch/includes/: description.launch.xml
catkin_ws/catkin_ws/src/as_bringup/scripts/: create_udev_rules
catkin_ws/catkin_ws/src/as_bringup/src/: as_diagnostics.cpp
catkin_ws/catkin_ws/src/as_description/: CHANGELOG.rst  package.xml
catkin_ws/catkin_ws/src/as_navigation/: CHANGELOG.rst  CMakeLists.txt
catkin_ws/catkin_ws/src/as_slam/: CMakeLists.txt  package.xml
catkin_ws/catkin_ws/src/as_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
catkin_ws/catkin_ws/src/as_teleop/launch/: as_teleop_key.launch
catkin_ws/devel/: .catkin  _setup_util.py
catkin_ws/devel/include/turtlebot3_example/: Turtlebot3ActionFeedback.h  Turtlebot3Feedback.h
catkin_ws/devel/lib/pkgconfig/: map_provider.pc  turtlebot3_example.pc  turtlebot3_navigation.pc  turtlebot3_teleop.pc
catkin_ws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
catkin_ws/src/as_bringup/launch/: as_core.launch  as_model.launch  as_remote.launch  as_robot.launch
catkin_ws/src/as_description/: CMakeLists.txt
catkin_ws/src/as_description/urdf/: as_burger.gazebo.xacro  as_burger_for_autorace.gazebo.xacro  as_burger_for_autorace.urdf.xacro
catkin_ws/src/as_gazebo/: package.xml
catkin_ws/src/as_gazebo/launch/: as_world.launch
catkin_ws/src/as_navigation/: package.xml
catkin_ws/src/as_navigation/launch/: move_base.launch
catkin_ws/src/as_navigation/maps/: map.yaml
catkin_ws/src/as_slam/bag/: bag_files.md
catkin_ws/src/as_slam/launch/: as_cartographer.launch  as_manipulation_slam.launch  as_slam.launch
catkin_ws/src/as_slam/rviz/: as_gmapping.rviz
catkin_ws/src/as_teleop/nodes/: as_teleop_key
models/camilla/: model-1_4.sdf  model.config  model.sdf
models/camilla/materials/scripts/: camilla.material
(+29 files in other folders)
