<?xml version="1.0"?>
<package format="2">
  <name>as_bringup</name>
  <version>1.2.5</version>
  <description>
    roslaunch scripts for starting the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/as_bringup</url>
  <url type="emanual">http://as.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/as</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/as/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>as_msgs</depend>
  <exec_depend>as_description</exec_depend>
  <exec_depend>as_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <!-- <exec_depend>realsense_camera</exec_depend> for TurtleBot3 Waffle using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for TurtleBot3 Waffle Pi using Raspberry Pi Camera -->
</package>
